# aussieOS

./: CNAME  README.md  index.html  style.css
LICENSE/: LICENSE.md
apps/hall-of-mirrors/: README.md  index.html
builtdifferent/: index.html
fairgo/: LICENSE.md  README.md  index.html
fairgo/mvp/calculator/: README.md  calculator.ts  encode.ts  metrics.ts  package.json  tsconfig.json
fairgo/mvp/calculator/sample-data/: 5USjS2Rodv85eJSDwVWBvTnmcrZ3aJmDkGw8JFw2xpXq.json  5VXSdL7BxgDjEDNX2hcGNNnzbN8tUbdunPpBS2Xop6Mp.json  9kzWnhkPavLaKD8rAUfC2oNa4VzQ4kY22UyzwcD2VC2u.json  Dv6eNLFw1honXdzKdUzGV2FHydfYN2wkLArYwLiMNTu5.json  wallet-example.json
fairgo/mvp/calculator/scripts/: generate-demo-wallets.ts  generate-sample-data.ts
fairgo/mvp/calculator/src/: cli.ts  types.ts
fairgo/mvp/dashboard/: README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts
fairgo/mvp/dashboard/app/: globals.css  layout.tsx  page.tsx
fairgo/mvp/dashboard/components/: AussieOSWordmark.tsx  InputPanel.tsx  ResultsView.tsx  SiteFooter.tsx  SiteHeader.tsx
fairgo/mvp/dashboard/lib/: demoWallets.ts  format.ts  localResults.ts  merge.ts  solana.ts  types.ts  validate.ts
fairgo/mvp/dashboard/sample-data/results/: 5USjS2Rodv85eJSDwVWBvTnmcrZ3aJmDkGw8JFw2xpXq.json  5VXSdL7BxgDjEDNX2hcGNNnzbN8tUbdunPpBS2Xop6Mp.json  8pT7q2W4nZ3rY6uJ1xK9mD5vC0bH2fS7eL4gA6oR3sQ1.json  9kzWnhkPavLaKD8rAUfC2oNa4VzQ4kY22UyzwcD2VC2u.json  (+1 more)
fairgo/mvp/program/: Anchor.toml  Cargo.toml
fairgo/mvp/program/programs/fairgo/: Cargo.toml
fairgo/mvp/program/programs/fairgo/src/: lib.rs
