[package]
name = "fairgo"
version = "0.1.0"
description = "FairGo MVP — on-chain FGV attestation registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fairgo"

[features]
no-entrypoint = []
no-idl = []
no-log-ip = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# init_if_needed is required for the "overwrite on republish" semantics
# used by publish_attestation.
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
